syntax = "proto3";

package buildbarn.playground.configuration.encoding;

import "google/protobuf/empty.proto";

option go_package = "github.com/buildbarn/bb-playground/pkg/proto/configuration/encoding";

message DeterministicEncryptingBinaryEncoderConfiguration {
  bytes encryption_key = 1;
}

message BinaryEncoderConfiguration {
  oneof encoder {
    google.protobuf.Empty lzw_compressing = 1;

    DeterministicEncryptingBinaryEncoderConfiguration deterministic_encrypting =
        2;
  }
}
